[gd_scene load_steps=10 format=3 uid="uid://bp0ujel6nh1fa"]

[ext_resource type="Script" path="res://Characters/glockmaster_5000.gd" id="1_gypby"]
[ext_resource type="Texture2D" uid="uid://s6in0djbj1qt" path="res://art/Glockmaster5000.png" id="1_i0e3o"]
[ext_resource type="PackedScene" uid="uid://dv4a0abpd66jf" path="res://Characters/covid.tscn" id="2_jlswx"]

[sub_resource type="Animation" id="Animation_x1tim"]
resource_name = "Idle"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glockmaster5000:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_l5p5t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glockmaster5000:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="Animation" id="Animation_fkphk"]
resource_name = "Shooting"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glockmaster5000:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3sl5t"]
_data = {
"Idle": SubResource("Animation_x1tim"),
"RESET": SubResource("Animation_l5p5t"),
"Shooting": SubResource("Animation_fkphk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8whdb"]
size = Vector2(514, 348)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6dyhp"]
size = Vector2(43, 6.5)

[node name="Glockmaster5000" type="CharacterBody2D"]
script = ExtResource("1_gypby")
bullet = ExtResource("2_jlswx")

[node name="Glockmaster5000" type="Sprite2D" parent="."]
position = Vector2(292, 166)
scale = Vector2(0.539063, 0.539063)
texture = ExtResource("1_i0e3o")
hframes = 3

[node name="Marker2D" type="Marker2D" parent="Glockmaster5000"]
position = Vector2(-446.361, -211.268)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3sl5t")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(282, 164)
shape = SubResource("RectangleShape2D_8whdb")

[node name="Area2D" type="Area2D" parent="."]

[node name="MoveHitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2(51, 54)
shape = SubResource("RectangleShape2D_6dyhp")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
